--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+
 }
 
 .App-header {
@@ -14,7 +15,7 @@
 }
 
 .timetable {
-  size: 100%
+  size: 100%;
 }
 
 .App-link {
